--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "E3TU",
   "license": "ISC",
   "dependencies": {
     "prompt-sync": "^4.2.0"
